<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_app"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/edtHoTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_hoten"
            android:autofillHints="name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtMSSV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mssv"
            android:autofillHints="none"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_chonmon"
            android:layout_marginTop="16dp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cbAndroid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mon_android" />

        <CheckBox
            android:id="@+id/cbJava"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mon_java" />

        <CheckBox
            android:id="@+id/cbPython"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mon_python" />

        <CheckBox
            android:id="@+id/cbWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mon_web" />

        <CheckBox
            android:id="@+id/cbDatabase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mon_database" />

        <CheckBox
            android:id="@+id/cbNetworking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mon_networking" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/btnTinh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_tinh"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btnReset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_reset"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvKetQua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="#EEEEEE"
            android:text="@string/receipt_placeholder"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>